# s-pow-prog

./: .env  Anchor.toml
programs/s-pow-prog/: Cargo.toml
programs/s-pow-prog/src/: constants.rs  errors.rs  lib.rs
programs/s-pow-prog/src/instructions/: accept_proposal.rs  approve_proposal.rs  cancel_proposal.rs  create_proposal.rs  mod.rs  reject_proposal.rs
programs/s-pow-prog/src/schemas/: mod.rs  proposal.rs
tests/: s-pow-prog.test.ts
tests/helpers/: airdropIfNeeded.ts  constants.ts  setup.ts
