[package]
name = "s-pow-prog"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "s_pow_prog"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.26.0", features=["init-if-needed"]}
anchor-spl = { version = "0.26.0", features = ["default", "spl-token"] }
